--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Portal de vagas de emprego para desenvolvedores - Dev Jobs"
-    />
+    <meta name="description" content="A product of emergent.sh" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -21,7 +18,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Dev Jobs</title>
+    <title>Emergent | Fullstack App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
