--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,27 @@
       name="description"
       content="Portal de vagas de emprego para desenvolvedores - Dev Jobs"
     />
+
+    <!-- GitHub Pages SPA redirect script -->
+    <script type="text/javascript">
+      // Check if we were redirected from 404.html
+      (function (l) {
+        if (l.search[1] === "/") {
+          var decoded = l.search
+            .slice(1)
+            .split("&")
+            .map(function (s) {
+              return s.replace(/~and~/g, "&");
+            })
+            .join("?");
+          window.history.replaceState(
+            null,
+            null,
+            l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      })(window.location);
+    </script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
